--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="habit" data-name="food">🍔</div>
         <div class="habit" data-name="studying">📚</div>
         <div class="habit" data-name="game">🎮</div>
+        <div class="habit" data-name="sleep">💤</div>
       </div>
 
       <div class="days"></div>
